Fixed bug where text could overflow into icon in toasts. Fixed error where timeout would fire even if it was not configured for toasts.

--- a/src/Components/Toast/kiwi-toast/kiwi-toast.scss
+++ b/src/Components/Toast/kiwi-toast/kiwi-toast.scss
@@ -72,13 +72,10 @@
 
 #close-icon {
 	display: block;
-	height: 1em;
-	width: 1em;
-	min-height: 1em;
-	min-width: 1em;
-	position: absolute;
-	top: 0;
-	right: 0;
+	height: 1rem;
+	width: 1rem;
+	min-height: 1rem;
+	min-width: 1rem;
 	cursor: pointer;
 	svg {
 		transition: all var(--kiwi-window-animation-duration, 200ms);
